--- a/HelloWorldNew/Base.lproj/Main.storyboard
+++ b/HelloWorldNew/Base.lproj/Main.storyboard
@@ -34,6 +34,9 @@
                                 <buttonConfiguration key="configuration" style="plain" title="Show Text ">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="35"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="showTextButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="9vj-oD-PS8"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -46,6 +49,10 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="NgQ-nJ-qun" secondAttribute="trailing" constant="54" id="lfE-aM-ZpS"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="helloWorldLabel" destination="NgQ-nJ-qun" id="T1Y-17-0T0"/>
+                        <outlet property="showTextButton" destination="h2x-CI-xzH" id="ZHd-OX-efq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
